The Second code review fix drawbacks bring new features
Organizer Logger as a Dict in a setting module
Create filter for logger handler
Create separate module for DialogFlow tools
Recognize Default fallBack by the key

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ telegram~=0.0.1
 requests~=2.22.0
 python-dotenv~=0.10.1
 python-telegram-bot[socks]~=12.2.0
-pathlib
-vk_api
-dialogflow
+pathlib==1.0.1
+vk_api==11.6.0
+dialogflow==0.7.2
 requests~=2.22.0
